5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1756_1185.log
== TEST (2019-05-28 20:15:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1
	print(i)
	print(acum )
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:17:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + v[i]
print(i)
print(acum )
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:18:05) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + v[i]
print(i)
print(acum )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:21:10) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1
	print(i)
	print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:21:20) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1
	print(i)
	print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:01) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.482257
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.986739
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.453606
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:08) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.04743
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.78142
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.86074
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.81749
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:13) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.64724
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.7753
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.87282
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.74911
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.97653
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.64194
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.14555
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.16861
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.36789
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.47089
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.57337
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.56354
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.16246
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.04501
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.05048
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:23) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.17332
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.14501
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.17787
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:27) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.17769
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.672499
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.977661
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.876705
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.957796
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:30) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.30005
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.1537
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.36059
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:32) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.48145
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.57045
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:33) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.56673
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:34) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.05437
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:36) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.0458
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.08826
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.16568
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.06722
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:38) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.56407
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.37373
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:41) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.23474
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.17746
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.38502
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.35274
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.46974
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- ERROR:
File "XXXX", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.67216
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:47) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.666955
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.5744
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.24226
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.71105
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
2.89889
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
3.24849
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:51) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.35429
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.927974
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
1.08951
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.770673
-- ERROR:
  File "/home/codebench/codes/1756/1185/main.py", line 10
    acum = acum + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:26:52) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
	print(i)
		acum = acum + 1
	print(acum)
	
-- EXECUTION TIME:
0.866927
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1185/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:27:51) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1         
	print(i)
	print(acum)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:28:12) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1         
	print(i)
print(acum)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:31:58) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
	print(i)
	i = i + 1
	acum = acum + 1
print(acum)	
-- ERROR:
File "XXXX", line 8
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:32:09) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
	i = i + 1
	acum = acum + 1
print(acum)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:32:58) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
	i = i + 1
	acum = acum + i
print(acum)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:35:46) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
	i = i + 1
	acum = acum + sum(i)
print(acum)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:38:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1
	print(i)
	print(acum)
-- EXECUTION TIME:
1009.65
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:40:48) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
	i = i + 1
	print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:41:15) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
	i = i + 1
	print(acum)
-- EXECUTION TIME:
2.26401
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
1
1
2
2
2
4
3
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
1
1
2
2
3
3
4
4
5
5
6
6
6
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:41:30) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
	i = i + 1
	print(acum)
-- EXECUTION TIME:
2.11311
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
1
1
2
2
2
4
3
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
1
1
2
2
3
3
4
4
5
5
6
6
6
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:41:41) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
	i = i + 1
	print(acum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:42:55) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
		print(acum)
	i = i + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:44:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + v[i]
print(i)
print(acum )
-- EXECUTION TIME:
598.313
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:44:03) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):
		i = i + 1
		acum = acum + 1         
	print(i)
print(acum)	
-- EXECUTION TIME:
946.355
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:44:37) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
	i = i + 1
	acum = acum + 1
	print(acum)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:45:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
		print(acum)
	i = i + 1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:47:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de inteiros:")))
i = 0 #posicao
acum = 0  #glicose elevada

while(i < size(v)):
	if(v[i] > 99):         
		print(i)
		acum = acum + 1
	i = i + 1
print(acum)	
-- EXECUTION TIME:
0.488667
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
